@@ -53,6 +53,7 @@ production.
 * (bug 28904) Update jQuery version from 1.4.4 to 1.6.1 (the latest version)
 * (bug 29441) Expose CapitalLinks config in JS to allow modules to properly
   handle titles on case-sensitive wikis.
+* (bug 29397) Implement mw.Title module in core.
 
 === Bug fixes in 1.19 ===
 * (bug 28868) Show total pages in the subtitle of an image on the
